Primera propuesta de estandar

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,5 @@
 rootProject.name = 'CleanSwing'
 
-include ':utils', ':clean-core',':material-swing'
+include ':clean-core'
 
-project(':utils').projectDir = "E:\\Trabajos\\Projects\\GIT Projects Gradle\\Utils" as File
 project(':clean-core').projectDir = "E:\\Trabajos\\Projects\\GIT Projects Gradle\\CleanCoreFull" as File
-project(':material-swing').projectDir = "E:\\Trabajos\\Projects\\GIT Projects Gradle\\MaterialSwing" as File
