--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
-apply plugin: 'java'
-apply plugin: 'jacoco'
+plugins {
+    id 'java'
+}
 
 group = 'com.clean.swing'
     
@@ -11,5 +12,5 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     
-    implementation project(':clean-core')
+    implementation project(':clean-core-full')
 }
