--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ plugins {
 }
 
 group = 'com.clean.swing'
-    
+
+version = '1.2.0.RELEASE.20201106'
+
 repositories {
     jcenter()
     mavenCentral()
