--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@ plugins {
     id 'java'
 }
 
-group = 'com.clean.swing'
+group = 'com.root101.clean'
 
-version = '2.0.0.RELEASE.20201219'
+version = '3.0.0.RELEASE.20201230'
 
 repositories {
     jcenter()
